introduced a css stylesheet to the index.html page called style.css.
new style changes include:
Header:
-new font weight
-new font family
-new background color
-new alignment

Image:
-new alignment using block (fancy)
-new size using auto for height (also fancy)

Sub-Header:
-new font family
-new alignment

Unordered-list:
-placed in a div container (hi-teck)
-new alignment

--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
         <title>Kasra's Recipes!</title>
     </head>
 
     <body>
-        <h1>Kas's TASTY ASS Recipes!</h1>
-        <img src="images/lick.jpg" alt="delicious"
-        width="175"
-        height="150">
-        <h3>Current Recipes</h3>
-        <ul>
-            <li><a href="pages/om.html">Omlete</a></li>
-            <li><a href="pages/ff.html">French Fries</a></li>
-            <li><a href="pages/sh.html">Shit</a></li>
-        </ul>
+        <h1 class="main-header">Kas's TASTY ASS Recipes!</h1>
+        <img src="images/lick.jpg" alt="delicious">
+        <h3 class="sub-header">Current Recipes</h3>
+        <div class="list-container">    
+            <ul>
+                <li><a href="pages/om.html">Omlete</a></li>
+                <li><a href="pages/ff.html">French Fries</a></li>
+                <li><a href="pages/sh.html">Shit</a></li>
+            </ul>
+        </div>
     </body>
 
 </html>
