--- a/pages/om.html
+++ b/pages/om.html
@@ -13,13 +13,28 @@
         shit, you're defo gonna get laid, no cap on the gang!
     </p>
     <img src="../images/om.jpg" alt="pic of omlete"
-    width="175"
-    height="150">
+    width="650"
+    height="350">
     <h3>Ingredies:</h3>
+    <ul>
+        <li>2 eggs</li>
+        <li>1 tomaTOE :P</li>
+        <li>1 stick of BUTTer XD</li>
+        <li>desired amount of salt and pepper</li>
+    </ul>
+    <h3>Instructions:</h3>
     <ol>
-    <li>2 eggs</li>
-    <li>1 tomaTOE</li>
-    <li>1 stick of butter</li>
+        <li>Put the stick of butter in a pan and heat that b up</li>
+        <li>Wait my bad chop up the tomatoes and put them in the pan before doing step 1</li>
+        <li>Turn up the heat and smash the tomato like your gf until it's outta juice</li>
+        <li>Put the stick of butter in the pan with the tomatoes and let it melt</li>
+        <li>Add salt and pepper</li>
+        <li>crack the eggs into the pan</li>
+        <li>Stir</li>
+        <li>Stir</li>
+        <li>Keep stirring</li>
+        <li>Don't let it burn</li>
+        <li>VOIALLA!</li>
     </ol>
 </body>
 </html>
